// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem Render with children? 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
    width: 100%;
    min-height: 82px;
    background-color: ",
          [Function],
          ";
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    border-style: solid;
    border-bottom-width: ",
          [Function],
          "px;
    border-bottom-color: ",
          [Function],
          ";
",
        ],
      },
      "displayName": "Styled(View)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <View>
    <Text>
      Test1
    </Text>
  </View>
  <Text>
    Test2
  </Text>
</StyledComponent>
`;

exports[`ListItem Render with custom border color? 1`] = `
<StyledComponent
  borderColor="#2e2e3a"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
    width: 100%;
    min-height: 82px;
    background-color: ",
          [Function],
          ";
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    border-style: solid;
    border-bottom-width: ",
          [Function],
          "px;
    border-bottom-color: ",
          [Function],
          ";
",
        ],
      },
      "displayName": "Styled(View)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`ListItem Render with custom color? 1`] = `
<StyledComponent
  color="#2e2e3a"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
    width: 100%;
    min-height: 82px;
    background-color: ",
          [Function],
          ";
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    border-style: solid;
    border-bottom-width: ",
          [Function],
          "px;
    border-bottom-color: ",
          [Function],
          ";
",
        ],
      },
      "displayName": "Styled(View)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`ListItem Render? 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
    width: 100%;
    min-height: 82px;
    background-color: ",
          [Function],
          ";
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    border-style: solid;
    border-bottom-width: ",
          [Function],
          "px;
    border-bottom-color: ",
          [Function],
          ";
",
        ],
      },
      "displayName": "Styled(View)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
